--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,6 +3,9 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
+org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.16.8-hotspot
+
+
 
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
@@ -42,3 +45,9 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+
+MYAPP_UPLOAD_STORE_FILE=signage.keystore
+MYAPP_UPLOAD_KEY_ALIAS=signage
+MYAPP_UPLOAD_STORE_PASSWORD=YOUR_PASSWORD
+MYAPP_UPLOAD_KEY_PASSWORD=YOUR_PASSWORD
