--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SignagePlayerTV",
+  "name": "signageplayertv",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.83.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
-    "@react-native/new-app-screen": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-device-info": "^15.0.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-immersive": "^2.0.0",
+    "react-native-network-info": "^5.2.2",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-video": "^6.19.0",
+    "react-native-webview": "^13.16.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +36,7 @@
     "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
+    "@types/react-native-immersive": "^1.0.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
